# anjuta-clang

./: configure.ac
libanjuta/: Makefile.am  anjuta-language-provider-utils.c  anjuta-language-provider-utils.h  anjuta-language-provider.c  anjuta-language-provider.h  anjuta-parser-utils.c  anjuta-parser-utils.h  anjuta-pkg-config.c  anjuta-pkg-config.h  anjuta-pkg-scanner.c  anjuta-provider-utils.c  anjuta-provider-utils.h
libanjuta/interfaces/: libanjuta.idl
plugins/: Makefile.am
plugins/am-project/: amp-package.c
plugins/language-manager/: plugin.c  plugin.h
plugins/language-support-cpp-java/: Makefile.am  anjuta-language-cpp-java.plugin.in  anjuta-language-cpp-java.ui  cpp-java-assist.c  cpp-java-assist.h  plugin.c
plugins/language-support-js/: anjuta-language-javascript.ui  js-support-plugin.plugin.in  org.gnome.anjuta.js.gschema.xml.in  org.gnome.anjuta.plugins.js.gschema.xml.in  plugin.c  plugin.h  prefs.h
plugins/language-support-python/: anjuta-language-support-python.plugin.in  anjuta-language-support-python.ui  plugin.c  python-assist.c  python-assist.h
plugins/language-support-vala/: Makefile.am  config.vapi  org.gnome.anjuta.plugins.vala.gschema.xml.in  plugin.vala  provider.vala
plugins/parser-clang/: Makefile.am  anjuta-parser-clang.plugin.in  assist.c  assist.h  org.gnome.anjuta.plugins.parser-clang.gschema.xml.in  parser-clang-assist.c  parser-clang-assist.h  parser.c  parser.h  plugin.c  plugin.h
plugins/parser-cxx/: Makefile.am  anjuta-parser-cxx.plugin.in  anjuta-parser-cxx.ui  assist.c  assist.h  cpp-java-assist.c  parser-cxx-assist.c  plugin.c  plugin.h
plugins/parser-cxx/cxxparser/: Makefile.am
plugins/parser-engine/: Makefile.am  anjuta-parser-engine.plugin.in  plugin.c  plugin.h  provider.c  provider.h  utils.c  utils.h
plugins/parser-vala/: Makefile.am  anjuta-parser-vala.plugin.in  org.gnome.anjuta.plugins.parser-vala.gschema.xml.in  plugin.c  plugin.h  plugin.vala
plugins/snippets-manager/: snippets-provider.c
plugins/sourceview/: sourceview-provider.c  sourceview-provider.h  sourceview.c
